--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-fontawesome": "^1.3.1",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0"
